non-compatible/tests/ecc-gcp-129-gke_net_firewall_inbound_to_all_traffic/placebo-red/get-v1-projects-cloud-custodian-locations---clusters_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Tue, 13 Dec 2022 08:24:47 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "8616",
    "-content-encoding": "gzip",
    "content-location": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/-/clusters?alt=json"
  },
  "body": {
    "clusters": [
      {
        "name": "cluster-129-red",
        "initialNodeCount": 1,
        "nodeConfig": {
          "machineType": "e2-medium",
          "diskSizeGb": 100,
          "oauthScopes": [
            "https://www.googleapis.com/auth/devstorage.read_only",
            "https://www.googleapis.com/auth/logging.write",
            "https://www.googleapis.com/auth/monitoring",
            "https://www.googleapis.com/auth/service.management.readonly",
            "https://www.googleapis.com/auth/servicecontrol",
            "https://www.googleapis.com/auth/trace.append"
          ],
          "metadata": {
            "disable-legacy-endpoints": "true"
          },
          "imageType": "COS_CONTAINERD",
          "serviceAccount": "default",
          "diskType": "pd-balanced",
          "shieldedInstanceConfig": {
            "enableIntegrityMonitoring": true
          }
        },
        "masterAuth": {
          "clusterCaCertificate": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRTlYwVGVVYWFGMjhFTmQ1L3ptU3Y0ekFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlSaU1tSXhaREV4TkMxbFlUTTVMVFEzWTJZdE9ETmtNeTFsWldJd05tUm1aVFEyTkRrdwpJQmNOTWpJeE1qRXpNRGN4TmpJeldoZ1BNakExTWpFeU1EVXdPREUyTWpOYU1DOHhMVEFyQmdOVkJBTVRKR0l5CllqRmtNVEUwTFdWaE16a3RORGRqWmkwNE0yUXpMV1ZsWWpBMlpHWmxORFkwT1RDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQUxOUTlGSnZIUzRnUEk1d2xLNml6c2oyRm1NMkhmNEdycEM0V [...]
        },
        "loggingService": "logging.googleapis.com/kubernetes",
        "monitoringService": "monitoring.googleapis.com/kubernetes",
        "network": "network-129-red",
        "clusterIpv4Cidr": "10.84.0.0/14",
        "addonsConfig": {
          "kubernetesDashboard": {
            "disabled": true
          },
          "networkPolicyConfig": {
            "disabled": true
          },
          "gcePersistentDiskCsiDriverConfig": {
            "enabled": true
          }
        },
        "subnetwork": "network-129-red",
        "nodePools": [
          {
            "name": "default-pool",
            "config": {
              "machineType": "e2-medium",
              "diskSizeGb": 100,
              "oauthScopes": [
                "https://www.googleapis.com/auth/devstorage.read_only",
                "https://www.googleapis.com/auth/logging.write",
                "https://www.googleapis.com/auth/monitoring",
                "https://www.googleapis.com/auth/service.management.readonly",
                "https://www.googleapis.com/auth/servicecontrol",
                "https://www.googleapis.com/auth/trace.append"
              ],
              "metadata": {
                "disable-legacy-endpoints": "true"
              },
              "imageType": "COS_CONTAINERD",
              "serviceAccount": "default",
              "diskType": "pd-balanced",
              "shieldedInstanceConfig": {
                "enableIntegrityMonitoring": true
              }
            },
            "initialNodeCount": 1,
            "management": {
              "autoUpgrade": true,
              "autoRepair": true
            },
            "podIpv4CidrSize": 24,
            "locations": [
              "us-central1-f",
              "us-central1-b",
              "us-central1-a"
            ],
            "networkConfig": {
              "enablePrivateNodes": false
            },
            "selfLink": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/us-central1/clusters/cluster-129-red/nodePools/default-pool",
            "version": "1.24.5-gke.600",
            "instanceGroupUrls": [
              "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-f/instanceGroupManagers/gke-cluster-129-red-default-pool-41ad3326-grp",
              "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-b/instanceGroupManagers/gke-cluster-129-red-default-pool-04e13470-grp",
              "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-a/instanceGroupManagers/gke-cluster-129-red-default-pool-33ffab5e-grp"
            ],
            "status": "RUNNING",
            "upgradeSettings": {
              "maxSurge": 1,
              "strategy": "SURGE"
            }
          }
        ],
        "locations": [
          "us-central1-f",
          "us-central1-b",
          "us-central1-a"
        ],
        "resourceLabels": {
          "custodiarule": "epam-gcp-129-gke_net_firewall_inbound_to_all_traffic",
          "compliancestatus": "red"
        },
        "labelFingerprint": "354b5735",
        "legacyAbac": {},
        "ipAllocationPolicy": {
          "useRoutes": true,
          "stackType": "IPV4"
        },
        "masterAuthorizedNetworksConfig": {
          "gcpPublicCidrsAccessEnabled": true
        },
        "maintenancePolicy": {
          "resourceVersion": "e3b0c442"
        },
        "binaryAuthorization": {},
        "autoscaling": {
          "autoscalingProfile": "BALANCED"
        },
        "networkConfig": {
          "network": "projects/cloud-custodian/global/networks/network-129-red",
          "subnetwork": "projects/cloud-custodian/regions/us-central1/subnetworks/network-129-red",
          "defaultSnatStatus": {},
          "serviceExternalIpsConfig": {}
        },
        "databaseEncryption": {
          "state": "DECRYPTED"
        },
        "shieldedNodes": {
          "enabled": true
        },
        "releaseChannel": {
          "channel": "REGULAR"
        },
        "notificationConfig": {
          "pubsub": {}
        },
        "selfLink": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/us-central1/clusters/cluster-129-red",
        "zone": "us-central1",
        "endpoint": "34.172.5.183",
        "initialClusterVersion": "1.24.5-gke.600",
        "currentMasterVersion": "1.24.5-gke.600",
        "currentNodeVersion": "1.24.5-gke.600",
        "createTime": "2022-12-13T08:16:22+00:00",
        "status": "RUNNING",
        "nodeIpv4CidrSize": 24,
        "servicesIpv4Cidr": "10.87.240.0/20",
        "instanceGroupUrls": [
          "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-f/instanceGroupManagers/gke-cluster-129-red-default-pool-41ad3326-grp",
          "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-b/instanceGroupManagers/gke-cluster-129-red-default-pool-04e13470-grp",
          "https://www.googleapis.com/compute/v1/projects/cloud-custodian/zones/us-central1-a/instanceGroupManagers/gke-cluster-129-red-default-pool-33ffab5e-grp"
        ],
        "currentNodeCount": 3,
        "location": "us-central1",
        "autopilot": {},
        "id": "0da788d86d594bb3a601b1999feed8b90fa86e48145848ee89a05c37ea9345c4",
        "nodePoolDefaults": {
          "nodeConfigDefaults": {
            "loggingConfig": {
              "variantConfig": {
                "variant": "DEFAULT"
              }
            }
          }
        },
        "loggingConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS",
              "WORKLOADS"
            ]
          }
        },
        "monitoringConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS"
            ]
          }
        },
        "nodePoolAutoConfig": {}
      }
    ]
  }
}
